tests/baselines/reference/unicodeExtendedEscapesInTemplates07_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates07_ES5.ts(3,19): error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates07_ES5.ts (1 errors) ====
    // ES6 Spec - 10.1.1 Static Semantics: UTF16Encoding (cp)
    //  1. Assert: 0 ≤ cp ≤ 0x10FFFF.
    var x = `\u{110000}`;
                      
!!! error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
    